Adding sonar support Fixed the most relevant code smells Fized incompatibilities with gradle 8