@@ -2,7 +2,6 @@ package me.renedo.shopping.status.application;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import me.renedo.shopping.shared.Service;
 import me.renedo.shopping.status.domain.Status;
@@ -11,6 +10,6 @@ import me.renedo.shopping.status.domain.Status;
 public class StatusResolver {
 
     public List<Status> getAllStatus(){
-        return Arrays.stream(Status.ACTIVE.getDeclaringClass().getEnumConstants()).collect(Collectors.toList());
+        return Arrays.stream(Status.ACTIVE.getDeclaringClass().getEnumConstants()).toList();
     }
 }
